Fixed responsiveness issue on dashboard: link now breaks (is caused a whitespace on the right side and messed up scrolling)

--- a/feedme/resources/sass/index.scss
+++ b/feedme/resources/sass/index.scss
@@ -1104,6 +1104,15 @@ body {
                     }
                 }
             }
+            .dashboard {
+                .environmentLink {
+                    .link {
+                        a {
+                            overflow-wrap: break-word;
+                        }
+                    }
+                }
+            }
         }
     }
 }
